# MultiStack

./: .travis.yml  CMakeLists.txt  README.md
MultiStack/: CMakeLists.txt  MultiStack.cpp  MultiStack.h
StackLib/: Stack.h
main/: CMakeLists.txt
test/: CMakeLists.txt  test_MultiStack.cpp
